--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^20.3.10",
     "@primeng/themes": "^19.0.5",
     "chart.js": "^4.5.1",
+    "parse-torrent-title": "^2.1.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
